--- a/src/components/FormStyles.css
+++ b/src/components/FormStyles.css
@@ -67,10 +67,10 @@ form textarea {
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
-    margin-bottom: 20;
+    margin-bottom: 30;
     display: inline-block;
     transition: all 0.5s ease;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .form button:hover {
@@ -116,14 +116,14 @@ form textarea {
     }
 
     Form {
-        height: 76%;
+        height: 77%;
         left: 9px;
         width: 358px;
     }
 
-    form button {
-        margin: 26px 9px 0;
-        margin-top: -1%
+    .form button {
+        margin: 26px 10px 0;
+        margin-top: 2%
     }
 
     .footer {
